fix: shed config

--- a/.shed.yml
+++ b/.shed.yml
@@ -1,4 +1,6 @@
 categories: []
 description: planemo
 name: planemo
-owner: rejuve
+owner: Tibex88
+homepage_url: https://github.com/Tibex88/trial_planemo
+remote_repository_url: https://github.com/Tibex88/trial_planemo
