--- a/.shed.yml
+++ b/.shed.yml
@@ -6,3 +6,5 @@ homepage_url: https://github.com/Tibex88/trial_planemo
 remote_repository_url: https://github.com/Tibex88/trial_planemo
 long_description: >
   Galaxy wrappers for Rejuve's Visual query builder for Humnan BioAtomspace
+categories:
+  - InteractiveTools
